# chore-master-python

./: .gitignore  README.md  pyproject.toml
_tmp/2025_02_23_export_prod/: financial_management_account.csv  financial_management_net_value.csv
_tmp/2025_02_23_import/: finance_account.csv  finance_asset.csv  finance_balance_entry.csv  finance_balance_sheet.csv  integration_resource.csv
_tmp/2025_03_05_export/: finance_account.csv  finance_asset.csv  finance_balance_entry.csv  finance_balance_sheet.csv  integration_resource.csv
_tmp/2025_03_05_import/: finance_account.csv  finance_asset.csv  finance_balance_entry.csv  finance_balance_sheet.csv  integration_resource.csv
apps/bill_processor/: README.md
apps/bill_processor/entrypoints/: build_bill.py  report_pnl_from_bill.py  report_portfolio_plot_from_bill.py  sinotrade.py  sinotrade_test.py  transform_to_csv.py
apps/chore_master_api/: README.md  config.py
apps/chore_master_api/deployments/: .env.example  docker-compose.infra.yml  docker-compose.local.yml
apps/chore_master_api/deployments/web_server/: Dockerfile  pyproject.toml
apps/chore_master_api/diagrams/: entities.plantuml
apps/chore_master_api/end_user_database/: end_user_orm.py
apps/chore_master_api/end_user_space/: end_user_orm.py  mapper.py
apps/chore_master_api/entrypoints/: database_generate_revision.py  database_import_data.py  database_upgrade.py  web_server.py
apps/chore_master_api/logical_sheets/: financial_management.py
apps/chore_master_api/models/: base.py  financial_management.py  some_module.py
apps/chore_master_api/modules/: base_discriminated_operator.py  base_discriminated_resource.py  coingecko_feed_discriminated_resource.py  feed_discriminated_operator.py  feed_discriminated_resource.py
apps/chore_master_api/repositories/: financial_management.py  some_module.py
apps/chore_master_api/service_layers/: auth.py  database.py  onboarding.py  user.py
apps/chore_master_api/unit_of_works/: financial_management_unit_of_work.py  some_module_unit_of_work.py
apps/chore_master_api/web_server/: app.py
apps/etf/entrypoints/: aggregate.py  build_yield.py  download_data.py  download_dividend.py
apps/mortgage_processor/: calc.py
apps/sample_strategy_manager/: READMD.md  lambda_function.py
apps/trading_bot/: .okx.env.template  strategy_manager.py
apps/trading_bot/okx_funding_fee_arbitrage/: close_positions.py  initialize_account.py  logger.py  number.py  open_positions.py  pagination.py  report_cash_flow_and_fee_balance.py  report_tickers.py  strategy.py
chore_master_api/: config.py
chore_master_api/entrypoints/: web_server.py
chore_master_api/logical_sheets/: financial_management.py  some_entity.py
chore_master_api/models/: base.py  entity.py  financial_management.py  some_entity.py  some_module.py  treasury.py
chore_master_api/repositories/: _base_repository.py  base_repository.py  financial_management.py  some_entity_repository.py  some_module.py  spreadsheet.py
chore_master_api/unit_of_works/: _unit_of_work.py  financial_management_unit_of_work.py  some_module_unit_of_work.py  unit_of_work.py
chore_master_api/web_server/: app.py
deployments/: .env.example  docker-compose.infra.yml  docker-compose.local.yml
deployments/chore_master_api/: Dockerfile
modules/base/: config.py  env.py
modules/database/: async_mongo_client.py  mongo_client.py  relational_database.py
modules/google_service/: google_service.py  mixin.py
modules/repositories/: base_repository.py  base_sheet_repository.py  base_sqlalchemy_repository.py
modules/scraper/: cloud_flare_solver.py  etherscan_scraper.py
modules/strategy/: base_strategy.py  config.py  exceptions.py  strategy_manager.py  strategy_utils.py
modules/unit_of_works/: base_spreadsheet_unit_of_work.py  base_sqlalchemy_unit_of_work.py  base_unit_of_work.py
modules/utils/: cache_utils.py  file_system_utils.py  json_utils.py  string_utils.py  symbol_utils.py
modules/web_server/: base_fastapi.py  config.py  exceptions.py
(+168 files in other folders)
