[tool.poetry]
authors = ["gocreating <gocreating@gmail.com>"]
description = ""
name = "chore-master-python"
package-mode = false
packages = []
version = "0.1.0"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.3"
fastapi = "^0.110.2"
google-api-python-client = "^2.131.0"
google-auth = "^2.29.0"
httpx = "^0.27.0"
motor = "^3.5.1"
patchright = "^1.49.1"
pydantic = "^2.6.3"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
pymongo = "==4.6.0"
python = "^3.10"
uvicorn = "^0.29.0"
